5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1644_2447.log
== TEST (2019-04-05 17:26:21) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+x 
else:
	s="Troco"+" "+u
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s="Falta"+" "+x 
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:26:49) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+x 
else:
	s="Troco"+" "+y
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s="Falta"+" "+x 
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:26:57) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+X 
else:
	s="Troco"+" "+Y
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s="Falta"+" "+X 
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:27:09) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+X 
else:
	s="Troco"+" "+Y
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s="Falta"+" "+X 
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:27:26) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+X 
else:
	s="Troco"+" "+float(Y)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s="Falta"+" "+X 
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:27:58) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+X 
else:
	s=float("Troco"+" "+Y)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s="Falta"+" "+X 
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:28:15) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s=float("Falta"+" "+X) 
else:
	s=float("Troco"+" "+Y)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s=float("Falta"+" "+X) 
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:28:59) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+X
else:
	
print(s)
-- ERROR:
File "XXXX", line 9
    print(s)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:29:17) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+X
else:
	s=Y
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s="Falta"+" "+X
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 17:29:25) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+X
else:
	s=Y
print(s)
-- EXECUTION TIME:
0.207857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 6, in <module>
    s="Falta"+" "+X
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:30:13) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
if(p1>p2):
	s="Falta"+" "+X
else:
	s="Troco"+" "+"de"+" "+Y
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s="Falta"+" "+X
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:30:44) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s="Falta"+" "+X
else:
	s=p+Y
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s="Falta"+" "+X
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:32:09) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
x= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s="Falta"+" "+X
else:
	s=Y
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s="Falta"+" "+X
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:32:23) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s="Falta"+" "+X
else:
	s=Y
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s="Falta"+" "+X
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:36:01) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s=("Falta"+X)
else:
	s="Troco de"+Y
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s=("Falta"+X)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:36:15) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s=("Falta"+X)
else:
	s=("Troco de"+Y)
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s=("Falta"+X)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:37:03) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s=("Falta"+"X")
else:
	s=("Troco de"+"Y")
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(s,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:37:25) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s=("Falta"+"X")
else:
	s=("Troco de"+"Y")
print(s)
-- OUTPUT:
FaltaX
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:38:57) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s=("Falta"+str(X))
else:
	s=("Troco de"+str(Y))
print(s)
-- OUTPUT:
Falta26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:39:19) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s=("Falta"+" "+str(X))
else:
	s=("Troco de"+" "+str(Y))
print(s)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 17:39:28) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s=("Falta"+" "+str(X))
else:
	s=("Troco de"+" "+str(Y))
print(s)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 17:39:51) 
-- CODE:
p1=float(input("preco:"))
p2=float(input("pagamento:"))
X= p1-p2
Y= p2-p1
p="Troco"+" "+"de"+" "
if(p1>p2):
	s=("Falta"+" "+str(X))
else:
	s=("Troco de"+" "+str(Y))
print(s)
-- EXECUTION TIME:
0.139453
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
